--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,10 @@ img {
 /* #endregion Type selectors */
 /* #region Class selectors */
 
-.rounded {
-    border-radius: 15%;
+.img-large {
+    width: 100%;
+    max-height: 30vh;
+    object-fit: contain;
 }
 
 /* #endregion Class selectors */
@@ -33,8 +35,11 @@ img {
 
 #start-page-content {
     margin: auto;
-    width: 60%;
+    width: 75%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* #endregion ID selectors */
