Update login button
Updated cursor and border of Spotify login button

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,8 @@ img {
     font-weight: bold;
     padding: 25px;
     text-align: center;
-    text-decoration: none;
+    cursor: pointer;
+    border: none;
 }
 
 #start-page-content {
